Added Charts and Instructions

--- a/src/index.scss
+++ b/src/index.scss
@@ -396,7 +396,7 @@ nav ul li a:hover  {
 div.hero {
     height: 350px;
     background-color: #b4c6f0;
-    background-image: url('/public/bg.png');
+    background-image: url('/bg.png');
     background-size: 400px;
     background-repeat: no-repeat;
     background-position: center bottom;
@@ -462,4 +462,9 @@ main article {
     main article {
         margin: 10px;
     }
+}
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;  /* or whatever height you desire */
 }
